PyMaker/datas/object2/RawHTML/i12101/Python_DOC_referPages.how-to-prevent-pythons-eval-from-using-when-evaluating-lists.txt
<div class="post-text" itemprop="text">
<p>I've noticed that Python's <em>eval</em>() function shortens some lists, using "...":</p>
<pre><code>In [10]: eval ('array([1. / 5.0e-12] + [0.]*1023)')
Out[10]: 
array([  2.00000000e+11,   0.00000000e+00,   0.00000000e+00, ...,
         0.00000000e+00,   0.00000000e+00,   0.00000000e+00])
</code></pre>
<p>How can I prevent it from doing so?<br/>
(Subsequent code is barfing on the "...".):</p>
<pre><code>  File "&lt;string&gt;", line 1
    initializer.channel_response = array([  2.00000000e+11,   0.00000000e+00,   0.00000000e+00, ...,
                                                                                                ^
SyntaxError: invalid syntax
</code></pre>
<p>Here is a typical "line" from one of my human-created configuration files:</p>
<pre><code>('Pretap = 0', \
    ({'root_name'        : 'example_tx', \
      'tx_tap_np1'       : 0, \
      'tx_tap_nm1'       : 0, \
      'tx_tap_nm2'       : 0, \
     }, \
     {'channel_response' : array([1. / 5.0e-12] + [0.]*1023), \
      'sample_interval'  : 5.0e-12, \
     } \
    ) \
)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You are trying to serialize (save) arrays in wrong way. Numpy has <a href="https://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.save.html" rel="nofollow">np.save</a> or <a href="https://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.savetxt.html" rel="nofollow">numpy.savetxt</a>, which you can use to save data and later numpy.load or <a href="https://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.loadtxt.html" rel="nofollow">numpy.loadtxt</a> it from file.</p>
<p>Don't use eval, it's neither safe nor sane to do this, because object representations may not show all information that is required to reliably reproduce some objects.</p>
<p>If you're loading human readable configuration, a common way is via module <a href="https://docs.python.org/3/library/configparser.html" rel="nofollow">configparser</a>.</p>
</div>
<span class="comment-copy">This has nothing to do with <code>eval</code>. You'd get the same result if you evaluated the same expression without <code>eval</code>. And the <code>...</code> is only present when displaying a numpy array as a string.</span>
<span class="comment-copy">It looks like you're running <code>eval</code> on a string and then copying the result and pasting it into a different line of code. Why do that? Why not just do <code>initializer.channel_response = array([1. / 5.0e-12] + [0.]*1023)</code>?</span>
<span class="comment-copy">Because, I'm reading several different configurations in from a file.</span>
<span class="comment-copy">Comments don't support code blocks. If you want formatted text, you need to edit into your original post.</span>
<span class="comment-copy">@Kevin, Thanks; original post updated.</span>
<span class="comment-copy">okay, I get that; thanks! So, if I want to read in configuration information, from a human edited file, into a running Python script, what is the best way?</span>
<span class="comment-copy">Commonly used is module configparser, some also use python modules directly and set constants there. Depends who will be changing these values.</span>
